css/styles.css
#heading {
  border-radius: 50%;
  width: 300px;
}

#hacker {
  float: right;
  margin-right: 15%;
  margin-top: 1.5%;
}

.jumbotron {
  background-color: #738517;
  padding-bottom: 1em;
}

.top {
  text-align: center;
  font-style: 'Varela Round', sans-serif;
}

.card-text p ul {
  text-align: center;
}

.card-header {
  text-align: center;
  background-color: #738517;
  border-color: black;
  border-width: medium;
}

h2 {
  text-align: center;
}

span a {
  margin-top: 40px;
}

.row {
  margin-top: 20px;
}

h3 {
  text-align: center;
  margin-top: 20px;
  margin-bottom:20px;
}

h4 {
  text-align: center;
}

.top p {
  font-size: 50px;
  margin-top: 10px;
}

